# hisilicon_sdk_examples

./: .gitignore  CMakeLists.txt
sample/audio/: inner_codec_readme.txt  sample_audio.c  tlv320aic31_readme.txt
sample/hifb/: sample_hifb.c
sample/ive/: sample_ive_main.c
sample/ive/sample/: sample_ive_canny.c  sample_ive_main.h  sample_ive_md.c  sample_ive_od.c  sample_ive_sobel_with_cached_mem.c  sample_ive_test_memory.c
sample/scene_auto/ini/IPC/: sceneauto_222.ini  sceneauto_ar0130.ini  sceneauto_ar0230.ini  sceneauto_ar0230_wdr.ini  sceneauto_ov9732.ini  sceneauto_ov9750.ini
sample/scene_auto/src/adapt/hi3518e/: hi_sceneauto_adpt.c
sample/scene_auto/src/common/: hi_srdk_sceneauto.c
sample/scene_auto/src/include/: hi_sceneauto_comm.h  hi_sceneauto_comm_ext.h  hi_sceneauto_define.h  hi_srdk_sceneauto_define_ext.h
sample/tde/: Makefile  sample_tde.c
sample/vio/: sample_vio.c
